@@ -1,3 +1,7 @@
+2007-07-09  Satoshi Nakagawa <artension@gmail.com>
+
+	Changed encoding defaults, ISO-2022-JP for Japanese, UTF-8 for others.
+
 2007-07-08  Satoshi Nakagawa <artension@gmail.com>
 
 	Added double click servers to connect or disconnect.
